# memory-safe-assembly

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml  shell.cross.nix  shell.local.nix  shell.nix
asm-files/: dummy_counter.py  strip_arm_asm.py
asm-files/boringssl/: Makefile  cmake_install.cmake  processed-sha256-armv8-linux.S  strip_arm_asm.py
bums_macros/: Cargo.toml  README.md
bums_macros/src/: disassembler.rs  lib.rs
crypto-playground/: Cargo.toml  README.md  build.rs  plot_crypto_bench.py  pyvenv.cfg
crypto-playground/.cargo/: config.toml
crypto-playground/assembly/: bn-armv8-apple.S  processed-sha256-armv8-apple.S  sha256-armv8-apple.S  sha256-armv8-linux.S
crypto-playground/assembly/aws-fips/: aesv8-armx.S  aesv8-gcm-armv8-unroll8.S  aesv8-gcm-armv8.S  armv8-mont.S  bn-armv8.S  ghash-neon-armv8.S  ghashv8-armx.S  keccak1600-armv8.S  md5-armv8.S  p256-armv8-asm.S  p256_beeu-armv8-asm.S  sha1-armv8.S  sha256-armv8.S  sha512-armv8.S  vpaes-armv8.S  wrapped-sha256-armv8.S
crypto-playground/assembly/openssl-processed/: bn-armv8-linux.S  sha1-armv8-apple.S
crypto-playground/benches/: sha.rs
crypto-playground/generated-asm/ios-aarch64/crypto/fipsmodule/: aesv8-gcm-armv8.S  ghash-neon-armv8.S  sha1-armv8-old.S  sha256-armv8-old.S  sha256-armv8.S
crypto-playground/generated-asm/linux-aarch64/crypto/fipsmodule/: ghash-neon-armv8.S  sha256-armv8.S
crypto-playground/misc/: bench_results.txt
crypto-playground/src/: aes.rs  awslc.rs  bn.rs  c_example_main.rs  c_translation.rs  gcm.rs  ghash.rs  lib.rs  md5.rs  sha1.rs  sha256.rs  utils.rs
crypto-playground/src/aes/tests/: cipher.rs
crypto-playground/src/aes/tests/cipher/: aes.rs  block.rs  chacha.rs  fips.rs  iv.rs  key.rs
formal-verification-playground/: README.md
memsafe-checker/: Cargo.toml  README.md  rust-toolchain.toml
memsafe-checker/assets/: sha256-armv8-ios64.S
memsafe-checker/benches/: benchmarks.rs
memsafe-checker/src/: common.rs  computer.rs  engine.rs  instruction_parser.rs  lib.rs  main.rs  parser.rs
memsafe-checker/src/computer/: instruction_aux.rs  instructions.rs  memory.rs  simd.rs
memsafe-checker/tests/: cli.rs  examples.rs
memsafe-checker/tests/asm-examples/: abstract-loop-on-input.S  abstract-loop-with-reset.S  abstract-loop.S  bad-abstract-loop.S  bn-armv8-apple.S  double-abstract-loop.S  ghash-neon-armv8.S  loop-up-down.S  loops.S  processed-sha256-armv8-ios64.S  processed-sha256-armv8-linux.S  stack-push-pop.S  stack_misalign.S  store_load_pair.S  wrapped-ghash-neon-armv8.S  wrapped-sha256-armv8-ios64.S
playground/: Cargo.toml  build.rs  example.S
rav1d-playground/: Cargo.toml  build.rs  clean-objdump.py  disassemble-dir.sh  my-build.rs
rav1d-playground/.cargo/: config.toml
rav1d-playground/asm/: disassemble-dir.sh
rav1d-playground/asm/disassembled-asm/: ca81b3637afdb6b5-cdef.o.dis  ca81b3637afdb6b5-cdef16.o.dis  ca81b3637afdb6b5-filmgrain.o.dis  ca81b3637afdb6b5-filmgrain16.o.dis  ca81b3637afdb6b5-ipred.o.dis  ca81b3637afdb6b5-ipred16.o.dis  ca81b3637afdb6b5-itx.o.dis  ca81b3637afdb6b5-itx16.o.dis  ca81b3637afdb6b5-loopfilter.o.dis  ca81b3637afdb6b5-loopfilter16.o.dis  ca81b3637afdb6b5-looprestoration.o.dis  ca81b3637afdb6b5-looprestoration16.o.dis  ca81b3637afdb6b5-looprestoration_common.o.dis  ca81b3637afdb6b5-mc.o.dis  ca81b3637afdb6b5-mc16.o.dis  ca81b3637afdb6b5-mc_dotprod.o.dis  ca81b3637afdb6b5-msac.o.dis  ca81b3637afdb6b5-refmvs.o.dis  cdef.S  cdef16.S  filmgrain.S  filmgrain16.S  ipred.S  ipred16.S  itx.S  itx16.S  loopfilter.S  loopfilter16.S  looprestoration.S  looprestoration16.S  looprestoration_common.S  mc.S  mc16.S  msac.S  refmvs.S
rav1d-playground/asm/object-files/: ca81b3637afdb6b5-cdef.o.id0  ca81b3637afdb6b5-cdef.o.id1  config.h
rav1d-playground/include/: config.h
rav1d-playground/src/: asm.rs  edited-ipred.S  main.rs  rav1dsrc.rs
rav1d-playground/src/common/: bitdepth.rs
rav1d-playground/src/rav1dsrc/: align.rs  bitdepth.rs  disjoint_mut.rs  intops.rs
scrape-asm/: README.md  pyvenv.cfg  tool.py
(+6853 files in other folders)
