[package]
name = "bums_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro=true

[dependencies]
quote = "1.0.35"
syn = {version = "2.0.49", features = ["full", "extra-traits", "parsing"]}
bums = { path = "../memsafe-checker" }
proc-macro-error = "1.0.4"
proc-macro2 = {version="1.0.78", features=["proc-macro"]}
