[package]
name = "crypto-playground"
version = "0.1.0"
edition = "2021"

[dependencies]
bums_macros = { path = "../bums_macros" }
byteorder = "*"
num-traits = "0.2.18"

[dev-dependencies]
aws-lc-rs = "*"
aws-lc-sys = "0.14.1"

[build-dependencies]
bums_macros = { path = "../bums_macros" }
cc = "1.0.90"
