[package]
name = "crypto-playground"
version = "0.1.0"
edition = "2021"

[dependencies]
bums_macros = { path = "../bums_macros" }
byteorder = "*"
num-traits = "0.2.18"
rand = "0.8.5"
zeroize = "1.8.1"
cc = "1.0.90"
sha2 = { version = "0.10.8", features = ["asm-aarch64"] }
sha1 = "0.10.6"
aes ="0.8.4"

[dev-dependencies]
aws-lc-rs = "*"
aws-lc-sys = "0.22.0"

[build-dependencies]
rustc_version = "0.4.1"
bums_macros = { path = "../bums_macros" }
cc = "1.0.90"

[features]
nightly = []
