[package]
name = "bums"
version = "0.1.0"
edition = "2021"

[dependencies]
assert_cmd = "2.0.12"
env_logger = "0.10.0"
log = "0.4.21"
z3 = {version = "0.12.1", features = ["static-link-z3"]}

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false
